tests/EtaX/EtaX.prop/EtaX.prop.00.check
// src:   val t2a: () => Any = prop                   // error: no eta-expansion of nullary methods// 2.13-base error
target/tests/EtaX/EtaX.prop/EtaX.prop/EtaX.prop.00.scala:6: error: type mismatch;
 found   : String
 required: () => Any
  val t2a: () => Any = prop                   // error: no eta-expansion of nullary methods
                       ^
one error found

// 2.13-head error
target/tests/EtaX/EtaX.prop/EtaX.prop/EtaX.prop.00.scala:6: error: type mismatch;
 found   : String
 required: () => Any
  val t2a: () => Any = prop                   // error: no eta-expansion of nullary methods
                       ^
1 error

// 2.13-new  error <no change>
// 3.0-old   error
-- [E007] Type Mismatch Error: target/tests/EtaX/EtaX.prop/EtaX.prop/EtaX.prop.00.scala:6:23 
6 |  val t2a: () => Any = prop                   // error: no eta-expansion of nullary methods
  |                       ^^^^
  |                       Found:    String
  |                       Required: () => Any
1 error found

// 3.0       error <no change>
// 3.1       error <no change>

error error error error error error
